# my-data-analysist

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-09.jsonl  2026-07-12.jsonl
src/mydataanalysist/: analysist.py  cli.py  profiler.py
tests/: test_analysist.py  test_cli.py  test_profiler.py
